- Bug 2392 - SYN segment advertised window should not be scaled
- Bug 2396 - move utility functions to WifiPhy
- Bug 2397 - add backoff and cw tracing to EDCA
- Bug 2398 - add SNR tag to beacons and probe responses
- Bug 2406 - Poor 802.11g performance in ad-hoc mode
- Bug 2414 - UdpSocket doesn't call NotifyConnectionFailed

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.25
============

Availability
------------
This release is not yet available.

Supported platforms
-------------------
To be determined.

New user-visible features
-------------------------
- (internet) The native TCP implementation has been refactored, for the following
  improvements:  1) congestion control has been aligned with the Linux
  architecture, to facilitate easier coding of new congestion control algorithms
  or porting implementations from the Linux kernel, 2) Fast Retransmit and Fast
  recovery algorithms, compliant to RFCs, are shared by all TCP variants, unlike
  previous releases. 3) TCP Hybla and TCP HighSpeed have been added.
- (routing) The PrintRoutingTable* functions now print the following informations
  each time they are called: 1) the node ID, 2) the global time, 3) the local time
  4) the routing protocol type
- (internet) L4 protocols (e.g., TCP, UDP, ICMP, etc.) can be demultiplexed by IP
  according to the incoming interface. In other words, it is now possible to
  use specialized L4 protocols according to the interface.
- (internet) Ipv6Address::IsAllHostsMulticast() is now deprecated. FF02::3 is not
  in the official reserved IPv6 multicast address list.
- (internet) Ipv6Address::IsAll[Nodes,Routers]Multicast() now checks the address
  scope beyond the simple link-local. Nodes are checked for Interface-Local, Link-Local
  and Realm-Local, Routers for the above plus Site-Local.
- (internet) Ipv6 routing protocols must now *not* forward packets to upper layers